# owon-xdm1041-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
packaging/: 99-owon-xdm1041.rules  owon-xdm1041-server.service
scripts/: screenshot_ui.py
src/owon_xdm1041_server/: __init__.py  __main__.py  config.py  models.py  runner.py
src/owon_xdm1041_server/device/: __init__.py  commands.py  driver.py  factory.py  manager.py  mock.py  probe.py  transport.py
src/owon_xdm1041_server/scpi/: __init__.py  server.py
src/owon_xdm1041_server/storage/: __init__.py  db.py
src/owon_xdm1041_server/web/: __init__.py  api.py  app.py  broadcast.py  poller.py  recorder.py  views.py
src/owon_xdm1041_server/web/static/: dashboard.js  history.js  style.css
src/owon_xdm1041_server/web/templates/: _state.html  api.html  base.html  control.html  dashboard.html  history.html  scpi.html
tests/: conftest.py  test_config.py  test_runner.py
tests/device/: test_commands.py  test_driver.py  test_manager.py  test_mock.py  test_probe.py  test_transport_serial.py
tests/integration/: test_front_panel.py
tests/scpi/: test_server.py
tests/storage/: test_db.py
tests/web/: test_api.py  test_broadcast.py  test_history_api.py  test_poller.py  test_recorder.py  test_views.py
