[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owon-xdm1041-server"
version = "0.1.0"
description = "A network SCPI server and web UI for the OWON XDM1041 bench multimeter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Jason Antman", email = "jason@jasonantman.com" }]
keywords = ["owon", "xdm1041", "multimeter", "scpi", "instrument"]

dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyserial>=3.5",
]
docs = [
    # Used by scripts/screenshot_ui.py to regenerate the README screenshots.
    "playwright>=1.40",
]

[project.scripts]
owon-xdm1041-server = "owon_xdm1041_server.__main__:main"

[project.urls]
Homepage = "https://github.com/jantman/owon-xdm1041-server"
Repository = "https://github.com/jantman/owon-xdm1041-server"

[tool.hatch.build.targets.wheel]
packages = ["src/owon_xdm1041_server"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["owon_xdm1041_server"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=owon_xdm1041_server --cov-report=term-missing --cov-fail-under=85 -ra"
markers = [
    "hardware: tests that require a real XDM1041 attached (deselected by default)",
]
filterwarnings = [
    # Starlette's TestClient warns about httpx; test-only and out of our control.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
# Fail loudly instead of hanging on a stuck transaction (pytest-timeout).
timeout = 30

[tool.coverage.run]
branch = true
source = ["owon_xdm1041_server"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
